<resources>
    <!--  Text for labels  -->
    <string name="label_incidence">Cumulative incidence</string>
    <string name="label_incidence_ant">*Cases per 100,000 inhabitants</string>
    <string name="label_cases_total">Total cases:</string>
    <string name="label_cases_new">New cases:</string>
    <string name="active_cases">Active cases:</string>
    <string name="label_cases_deceases">Deceased:</string>
    <string name="label_cases_cured">Cured:</string>

    <string name="label_automatic_location">Automatic (gps)</string>

    <string name="label_settings_location">Use my current location</string>
    <string name="label_settings_notifications">Notifications</string>
    <string name="label_settings_widget">Activate info widget</string>

    <string name="header_latest_data">Current</string>
    <string name="header_previous_data">Previous</string>
    <string name="header_location_favorite">Favorite location</string>
    <string name="header_location_list">My locations</string>
    <string name="header_my_settings">App settings</string>
    <string name="header_faq">FAQ</string>

    <!--  Image descriptions  -->
    <string name="img_desc_no_data">No incidence data available</string>
    <string name="img_desc_covid_low">Incidence below 50</string>
    <string name="img_desc_covid_medium">Incidence between 50 and 150</string>
    <string name="img_desc_covid_high">Incidence over 150</string>

    <!--  Text for placeholders  -->
    <string name="placeholder_region_name">-</string>
    <string name="placeholder_incidence_value">-</string>
    <string name="placeholder_cases_total_value">-</string>
    <string name="placeholder_cases_new_value">-</string>
    <string name="placeholder_cases_cured_value">-</string>
    <string name="placeholder_cases_deceases_value">-</string>

    <!--  Text for hints  -->
    <string name="hint_search_location">Search your preferred location</string>


    <string name="app_name">InfoCovid</string>
    <string name="graphicsName">Incidencia Acumulada</string>
    <string name="homeName">Home</string>
    <string name="searchName">Buscar Ubicacion</string>
    <string name="settingsName">Ajustes</string>
    <string name="curados">Curados:</string>
    <string name="nuevos_casos">Nuevos casos:</string>
    <string name="fallecidos">Fallecidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_main">Main</string>
    <string name="title_details">Details</string>
    <string name="title_locations">Locations</string>
    <string name="title_search">Search Locations</string>
    <string name="title_settings">Settings</string>


    <string name="view_favorite_short">View</string>
    <string name="select_favorite_short">Select</string>

    <!-- Status messages -->
    <string name="error_connection">Your phone has a connection issue</string>
    <string name="status_favorites_list_empty">The list of favorites is empty</string>

    <!-- Error messages -->
    <string name="error_favorites_list">The list of favorites is empty</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>