<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.infocovid.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.infocovid.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.infocovid.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.infocovid.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>