<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:context=".ui.main.MainFragment">

    <!-- TextView to show the name of the region -->
    <TextView
        android:id="@+id/regionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/placeholder_region_name"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ImageView to show the status of incidence -->
    <!--
     0 to 49 = green image
     50 to 149 = yellow image
     >150 = red image
     -->
    <ImageView
        android:id="@+id/covidStatus"
        android:layout_width="244dp"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img_desc_no_data"
        android:gravity="center"
        android:src="@mipmap/ic_greencovid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionName" />

    <!-- TextView to show the cumulative incidence label -->
    <TextView
        android:id="@+id/cumulativeIncidenceLabel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/label_incidence"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/covidStatus" />

    <!-- TextView to show the name of the cumulative incidence value -->
    <TextView
        android:id="@+id/cumulativeIncidenceValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/placeholder_incidence_value"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cumulativeIncidenceLabel" />

    <!-- TextView to show the name of the cumulative incidence legend/ant -->
    <TextView
        android:id="@+id/cumulativeIncidenceAnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/label_incidence_ant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cumulativeIncidenceValue" />


    <!-- TableLayout to display the data about the current city-->
    <TableLayout
        android:id="@+id/regionData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#807D7D"
        app:layout_constraintTop_toBottomOf="@+id/cumulativeIncidenceAnt">

        <!-- TableRow to show the data about total cases -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <!-- ImageView to show the icon for total cases -->
            <ImageView
                android:id="@+id/regionDataTotalCasesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launchericoncovid" />

            <!-- TextView to show the label for total cases -->
            <TextView
                android:id="@+id/regionDataTotalCasesLabel"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="@string/label_cases_total"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- TextView to show the value for total cases -->
            <TextView
                android:id="@+id/regionDataTotalCasesValue"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/placeholder_cases_total_value"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>

        <!-- TableRow to show the data about new cases -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <!-- ImageView to show the icon for new cases -->
            <ImageView
                android:id="@+id/regionDataNewCasesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_nuevoscasos" />

            <!-- TextView to show the label for new cases -->
            <TextView
                android:id="@+id/regionDataNewCasesLabel"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="@string/label_cases_new"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- TextView to show the label for new cases -->
            <TextView
                android:id="@+id/regionDataNewCasesValue"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/placeholder_cases_new_value"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </TableRow>

        <!-- TableRow to show the data about total cured -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <!-- ImageView to show the icon for total cured -->
            <ImageView
                android:id="@+id/regionDataTotalCuredIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_curados" />

            <!-- TextView to show the label for total cured -->
            <TextView
                android:id="@+id/regionDataTotalCuredLabel"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="@string/label_cases_cured"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- TextView to show the label for total cured -->
            <TextView
                android:id="@+id/regionDataTotalCuredValue"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/placeholder_cases_cured_value"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>

        <!-- TableRow to show the data about total deceased -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <!-- ImageView to show the icon for total deceased -->
            <ImageView
                android:id="@+id/regionDataTotalDeceasedIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_fallecidos" />

            <!-- TextView to show the label for total deceased -->
            <TextView
                android:id="@+id/regionDataTotalDeceasedLabel"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:text="@string/label_cases_deceases"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- TextView to show the label for total deceased -->
            <TextView
                android:id="@+id/regionDataTotalDeceasedValue"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/placeholder_cases_deceases_value"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>