<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment"
    android:paddingBottom="20dp"
    >

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HoyDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="HOY"
        app:layout_constraintTop_toBottomOf="@+id/lineChart"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        />


    <TableLayout
        android:id="@+id/tableDetailHoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/HoyDetail"
        android:background="#807D7D"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"            >

            <ImageView
                android:id="@+id/imageViewNuevosCasosDetailTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_nuevoscasos"
                />

            <TextView
                android:id="@+id/nuevosCasosTableDetailTexto"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/nuevos_casos"
                android:gravity="center"

                android:textColor="@color/white"

                />

            <TextView
                android:id="@+id/nuevosCasosTableDetailNumero"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="7465"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"            >

            <ImageView
                android:id="@+id/imageViewCuradosTableDetailHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_curados"
                />

            <TextView
                android:id="@+id/curadosTableTextoDetailHoy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/curados"
                android:gravity="center"
                android:textColor="@color/white"

                />

            <TextView
                android:id="@+id/curadosTableNumeroDetailHoy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="1200"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"            >

            <ImageView
                android:id="@+id/imageViewFallecidosTableDetailHoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_fallecidos"
                />

            <TextView
                android:id="@+id/fallecidosTableTextoDetailHoy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/fallecidos"
                android:gravity="center"
                android:textColor="@color/white"


                />

            <TextView
                android:id="@+id/fallecidosTableNumeroDetailHoy"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="670"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/AntesDetail"
        android:text="ANTES"
        app:layout_constraintTop_toBottomOf="@+id/tableDetailHoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        />

    <TableLayout
        android:id="@+id/tableDetailAntes"
        app:layout_constraintTop_toBottomOf="@+id/AntesDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="#807D7D"
        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"            >

            <ImageView
                android:id="@+id/imageViewNuevosCasosTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_nuevoscasos"
                />

            <TextView
                android:id="@+id/nuevosCasosTableTexto"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/nuevos_casos"
                android:gravity="center"
                android:textColor="@color/white"

                />

            <TextView
                android:id="@+id/nuevosCasosTableNumero"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="7465"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"            >

            <ImageView
                android:id="@+id/imageViewCuradosTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_curados"
                />

            <TextView
                android:id="@+id/curadosTableTexto"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/curados"
                android:gravity="center"
                android:textColor="@color/white"

                />

            <TextView
                android:id="@+id/curadosTableNumero"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="1200"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewFallecidosTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_fallecidos"
                />

            <TextView
                android:id="@+id/fallecidosTableTexto"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="Fallecidos"
                android:gravity="center"
                android:textColor="@color/white"


                />

            <TextView
                android:id="@+id/fallecidosTableNumero"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="670"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"


                />


        </TableRow>


    </TableLayout>




</androidx.constraintlayout.widget.ConstraintLayout>